changes to read me file, and contact us page

--- a/views/ContactUs.html
+++ b/views/ContactUs.html
@@ -11,7 +11,7 @@
     <title>Contact Us</title>
 </head>
 <body>
-<h1>This is Contact Us page - Safal</h1>
+<h1>This is Contact Us page</h1>
 
 <!-- Optional JavaScript -->
 <!-- jQuery first, then Popper.js, then Bootstrap JS -->
