adds header and footer on Contact Us page

--- a/views/ContactUs.html
+++ b/views/ContactUs.html
@@ -1,22 +1,139 @@
-<!doctype html>
+<!DOCTYPE html>
+<!-- Template by Quackit.com -->
 <html lang="en">
 <head>
-    <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+    <script src="../js/home.js"></script>
+    <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <title>The Cohorts (P.W.A)</title>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <!-- Bootstrap 4 CSS. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/css/bootstrap.min.css" integrity="sha384-MIwDKRSSImVFAZCVLtU0LMDdON6KVCrZHyVQQj6e8wIEJkW4tvwqXrbMIya1vriY" crossorigin="anonymous">
 
-    <title>Contact Us</title>
+    <!-- Custom CSS: You can use this stylesheet to override any Bootstrap styles and/or apply your own styles -->
+    <link href="../css/custom.css" rel="stylesheet">
+
+    <!-- For icons -->
+    <link href="../css/font-awesome-4.6.3/css/font-awesome.min.css" rel="stylesheet">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
+    <!--        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
+    <!--    <![endif]&ndash;&gt;-->
+
 </head>
-<body>
-<h1>This is Contact Us page</h1>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<body>
+    <!-- Navigation -->
+    <div class="header-img" id="topWelcome" class="card-header"><div class="navbar-brand" href="#" style="float: right; padding: 50px;">Kent Church Logo</div> </div>
+    <nav id="topNav" class="navbar navbar-full navbar-top navbar-dark bg-inverse m-b-3">
+        <button class="navbar-toggler hidden-md-up pull-right" type="button" data-toggle="collapse" data-target="#navbar">
+            &#9776;
+        </button>
+
+        <div class="collapse navbar-toggleable-sm" id="navbar">
+            <ul class="nav navbar-nav">
+                <div class="nav-square col-sm-4"><a href="About.html">About Us</a></div>
+                <div class="nav-square col-sm-4"><a href="Services.html">Services</a></div>
+                <div class="nav-square col-sm-4"><a href="../index.html">Home</a></div>
+            </ul>
+        </div>
+    </nav>
+
+    <div class="container-fluid">
+
+
+    </div><!--/container-fluid-->
+
+    <div class="footer-blurb">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 footer-blurb-item">
+                    <h3><i class="fa fa-text-height" aria-hidden="true"></i> 1</h3>
+                    <p> Description.</p>
+                    <p><a class="btn btn-primary" href="#">Procrastinate</a></p>
+                </div>
+                <div class="col-sm-3 footer-blurb-item">
+                    <h3><i class="fa fa-wrench" aria-hidden="true"></i> 2</h3>
+                    <p>Description </p>
+                    <p><a class="btn btn-success" href="#">Unleash</a></p>
+                </div>
+                <div class="col-sm-3 footer-blurb-item">
+                    <h3><i class="fa fa-paperclip" aria-hidden="true"></i> 3</h3>
+                    <p> Description.</p>
+                    <p><a class="btn btn-primary" href="#">Complete</a></p>
+                </div>
+
+                <div class="col-sm-3 footer-blurb-item">-->
+
+                </div>
+            </div>
+            <!-- /.row -->
+        </div>
+    </div>
+
+    <div class="small-print">
+        <div class="container">
+            <p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
+
+
+
+
+        </div>
+        <!--
+        <button class="open-button" onclick="openForm()">Administrator Portal</button>
+
+        <div class="form-popup" id="myForm">
+            <form action="/action_page.php" class="form-container">
+                <h1>Login</h1>
+
+                <label for="email"><b>Email</b></label>
+                <input type="text" placeholder="Enter Email" name="email" required>
+
+                <label for="psw"><b>Password</b></label>
+                <input type="password" placeholder="Enter Password" name="psw" required>
+
+                <button type="submit" class="btn">Login</button>
+                <button type="button" class="btn cancel" onclick="closeForm()">Close</button>
+            </form>
+
+        </div>
+        -->
+
+        <!-- Bootstrap core JavaScript
+        ================================================== -->
+        <!-- Placed at the end of the document so the pages load faster -->
+
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js" integrity="sha384-THPy051/pYDQGanwU6poAc/hOdQxjnOEXzbT+OuUAFqNqFjL+4IGLBgCJC3ZOShY" crossorigin="anonymous"></script>
+
+        <!-- Tether -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.2.0/js/tether.min.js" integrity="sha384-Plbmg8JY28KFelvJVai01l8WyZzrYWG825m+cZ0eDDS1f7d/js6ikvy1+X+guPIB" crossorigin="anonymous"></script>
+
+        <!-- Bootstrap 4 JavaScript. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.3/js/bootstrap.min.js" integrity="sha384-ux8v3A6CPtOTqOzMKiuo3d/DomGaaClxFYdCu2HPMBEkf6x2xiDyJ7gkXU0MWwaD" crossorigin="anonymous"></script>
+
+        <!-- Initialize Bootstrap functionality -->
+        <script>
+            // Initialize tooltip component
+            $(function () {
+                $('[data-toggle="tooltip"]').tooltip()
+            })
+
+            // Initialize popover component
+            $(function () {
+                $('[data-toggle="popover"]').popover()
+            })
+        </script>
+
+        <!-- Placeholder Images -->
+        <script src="../js/holder.min.js"></script>
+    </div>
 </body>
+
 </html>
