--- a/css/home.css
+++ b/css/home.css
@@ -1,30 +1,52 @@
 {box-sizing: border-box;}
-
-div.navbar-brand {
-    background: white;
-    width: 150px;
-    height: 150px;
-    margin: .5%;
-
-    text-align: center;
-}
-.header-img {
-    width: 100%;
-    height: 200px;
-    background: url('http://www.kodhus.com/freecourse-images/header-image.jpg');
-}
 /* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-    background-color: #555;
+header {
+    background: black;
+}
+#generalbox {
+    padding-top: 2%;
+}
+a:link, a:visited {
     color: white;
-    padding: 16px 20px;
+    padding: 14px 25px;
+    text-align: center;
+    text-decoration: none;
+}
+
+#navbarText {
+    background: black;
+    box-shadow: 2px 5px 4px 5px #888888;
+}
+.navbar {
+    border-radius: .75rem;
+    background: darkgray;
+    border-bottom: solid pink thin;
+}
+
+.navbar-toggler-icon {
+    color: #bf2b2b;
+    float: left;
+    top: 50%;
+}
+.navbar-text {
+    margin-right: 50px;
+    color: lightpink;
+    float: right;
+}
+.nav-item:hover {
+    color: deeppink;
+}
+.open-button {
+    background-color: lightgray;
+    color: white;
+    /*padding: 10px 20px;*/
     border: none;
     cursor: pointer;
     opacity: 0.8;
-    bottom: -475px;
-    right: 16px;
+    /*bottom: -450px;*/
+    left: 0;
     position: absolute;
-    width: 280px;
+    width: 220px;
 }
 
 /* The popup form - hidden by default */
@@ -32,8 +54,8 @@ div.navbar-brand {
     display: none;
     position: fixed;
     float: bottom;
-    bottom: 3px;
-    right: 16px;
+    bottom: 30px;
+    left: 0;
     border: 3px solid #f1f1f1;
     z-index: 9;
 }
@@ -44,11 +66,13 @@ div.navbar-brand {
     padding: 10px;
     background-color: white;
 }
-div.nav-square.col-sm-4 {
+div.nav-square.col-sm-3 {
+    float: top;
     padding: 4px;
     background: white;
     text-align: center;
-    border: solid black;
+    width: 33%;
+    box-shadow: 5px 10px #888888;
 }
 /* Full-width input fields */
 .form-container input[type=text], .form-container input[type=password] {
