--- a/views/Services.html
+++ b/views/Services.html
@@ -32,6 +32,7 @@
 <!-- Navigation -->
 
 <div class="navbar" id="navbarText">
+    <img id="icon" href="#" src="images/cross.png"/>
     <ul class="navbar-nav mr-auto">
         <li class="nav-item">
             <a class="nav-link" href="About.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-heart" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
