--- a/views/ContactUs.html
+++ b/views/ContactUs.html
@@ -47,10 +47,10 @@
                 </svg> Services</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="ContactUs.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <a class="nav-link" href="../index.html"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-phone" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" d="M11 1H5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM5 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h6a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H5z"/>
                     <path fill-rule="evenodd" d="M8 14a1 1 0 1 0 0-2 1 1 0 0 0 0 2z"/>
-                </svg> Contact Us</a>
+                </svg> Home</a>
             </li>
         </ul>
         <span class="navbar-text">
@@ -73,20 +73,28 @@
                     <h5 class="card-title">Social Media</h5>
                 </div>
                 <div class="list-group list-group-flush">
-                    <a href="#" class="list-group-item list-group-item-action">Instagram</a>
-                    <a href="#" class="list-group-item list-group-item-action">Youtube</a>
-                    <a href="#" class="list-group-item list-group-item-action">Twitter</a>
-                    <a href="#" class="list-group-item list-group-item-action">Facebook</a>
+                    <a href="#" class="list-group-item list-group-item-action" style="color: black">Instagram</a>
+                    <a href="#" class="list-group-item list-group-item-action" style="color: black">Youtube</a>
+                    <a href="#" class="list-group-item list-group-item-action" style="color: black">Twitter</a>
+                    <a href="#" class="list-group-item list-group-item-action" style="color: black">Facebook</a>
                 </div>
             </div>
 
             <!-- Text Panel -->
             <div class="card">
                 <div class="card-header p-b-0">
-                    <h5 class="card-title">Picture</h5>
+                    <h5 class="card-title">Testimonial</h5>
                 </div>
                 <div class="card-block">
-                    <p>Picture of something " not cat :) "</p>
+                    <blockquote class="blockquote">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                    </blockquote>
+
+                    <blockquote class="blockquote">
+                        <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+                        <footer class="blockquote-footer">Someone famous in <cite title="Source Title">Source Title</cite></footer>
+                    </blockquote>
                 </div>
             </div>
         </div><!--/Left Column-->
@@ -95,25 +103,26 @@
         <div id="toppad" class="col-sm-4">
             <div class="row">
                 <article class="col-xs-12">
-                    <h2>Form they can reach to us</h2>
-
                     <form id="registration" method="get">
-                        <div class="form-group">
-                            <label for="exampleInputName1">Name</label>
-                            <input type="name" name="exampleInputName1" class="form-control" id="exampleInputName1"
-                                   aria-describedby="nameHelp" placeholder="Enter your name">
-                            <!--<span class="d-none error" id="err-name">&#9888; Field is required</span>-->
-                        </div>
+                        <h3>Drop us a line</h3>
+                        <fieldset>
+                            <div class="form-group">
+                                <label for="exampleInputName1">Name:</label>
+                                <input type="text" name="name" class="form-control" id="exampleInputName1" aria-describedby="nameHelp">
+                            </div>
 
-                        <div class="form-group">
-                            <label for="exampleInputEmail1">Email address</label>
-                            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                                   placeholder="you@example.com">
-                            <!--
-                            <span class="d-none error" id="err-email">&#9888; Field is required</span>
-                            <span class="d-none error" id="err-emailFormat">&#9888; Invalid email format</span>
-                            -->
-                        </div>
+                            <div class="form-group">
+                                <label for="exampleInputEmail1">Email address:</label>
+                                <input type="email" name="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="form-group">
+                                <label for="exampleFormControlTextarea1">Comments:</label>
+                                <textarea class="form-control" name="comments" id="exampleFormControlTextarea1" rows="3"></textarea>
+                            </div>
+                        </fieldset>
+
+                        <button type="submit" name=submit" class="btn btn-primary">Send Message</button>
                     </form>
                 </article>
             </div>
@@ -124,10 +133,15 @@
             <!-- Form -->
             <div class="card">
                 <div class="card-header p-b-0">
-                    <h5 class="card-title">Google Map iframe</h5>
+                    <h5 class="card-title">Address</h5>
                 </div>
                 <div class="card-block">
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2701.5390305333444!2d-122.21858724872685!3d47.38191477906818!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54905eaea6606e61%3A0x206815f453c0e48b!2s24447%2094th%20Ave%20S%2C%20Kent%2C%20WA%2098030!5e0!3m2!1sen!2sus!4v1602658843527!5m2!1sen!2sus" width="100%" height="80%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <address>24447 94th Ave. S <br> Kent, WA 98030</address>
+                    <p class="font-weight-bold">Hours</p>
+                    <p class="text-justify">Monday: 1 PM to 4 PM</p>
+                    <p class="text-justify">Tuesday: 9 AM to 12 PM</p>
+                    <p class="text-justify">Wednesday: 1 PM to 4 PM</p>
                 </div>
             </div>
 
@@ -136,7 +150,7 @@
                     <h5 class="card-title">Picture</h5>
                 </div>
                 <div class="card-block">
-                    <img src="../images/home/3church.jpg" width="100%" height="auto">
+                    <img src="../images/home/1church.jpg" width="100%" height="auto">
                 </div>
             </div>
         </div>
@@ -167,11 +181,7 @@
 
     <div class="small-print">
         <div class="container">
-            <p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> | <a href="#">Contact</a></p>
-
-
-
-
+            <p><a href="#" style="color: black">Terms &amp; Conditions</a> | <a href="#" style="color: black">Privacy Policy</a> | <a href="#" style="color: black">Contact</a></p>
         </div>
         <!--
         <button class="open-button" onclick="openForm()">Administrator Portal</button>
