--- a/views/Services.html
+++ b/views/Services.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <script src="../js/home.js"></script>
+    <script src="../js/services.js"></script>
     <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <link rel="stylesheet" type="text/css" href="../css/services.css">
     <title>Contact Us</title>
 
     <!-- Bootstrap 4 CSS. This is for the alpha 3 release of Bootstrap 4. This should be updated when Bootstrap 4 is officially released. -->
@@ -25,7 +27,6 @@
        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>-->
     <!--        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>-->
     <!--    <![endif]&ndash;&gt;-->
-
 </head>
 
 <body>
@@ -60,124 +61,108 @@
     <nav class="nav nav-underline"></nav>
 </div>
 
-<div class="container-fluid col-sm-8" style="padding-top: 2%">
+<div class="container-fluid col-sm-12" style="padding-top: 2%">
     <article class="card">
         <h2 class="card-header p-b-6">Services We Provide</h2>
-        <p>Those who qualify for these services:</p>
-        <ul>
-            <p>Must reside within Kent school zip code boundary.</p>
-            <p>Those who currently are without permanent shelter.</p>
-        </ul>
+        <p>To qualify for our services you must reside within the Kent school zip code boundary.</p>
+        <p>If you are currently without permanent shelter, please reach out to us right away for help.</p>
     </article>
 </div>
 
 <div class="container-fluid col-sm-8">
     <div class="fill">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <article class="card col">
                     <h5 class="card-header">Rent and Utility Funds</h5>
-                    <ul>
-                        <p>You can obtain this once every calendar year.</p>
-                        <p>Your name must be the name on the bill submitted.</p>
-                        <p>The bill must be marked as urgent or be a shut-off notice.</p>
-                    </ul>
+                    <p>You can obtain this <strong>once every calendar year</strong>.</br>
+                        Your name must be the name on the bill submitted.</p>
+                    <p><strong>*The bill must be marked as urgent or be a shut-off notice.</strong></p>
                 </article>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <article class="card col">
                     <h5 class="card-header p-b-0">Gas Vouchers</h5>
-                    <ul>
-                        <p>You can obtain this once every six months.</p>
-                        <p>You must have a valid/current Driver's license (not an ID card).</p>
-                    </ul>
+                    <p>You can obtain this <strong>once every six months</strong>.<br>
+                    You must have a valid/current Driver's license (not an ID card).</p>
                 </article>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-12">
                 <article class="card col">
                     <h5 class="card-header p-b-0">Thrift Store Vouchers</h5>
-                    <ul>
-                        <p>You can obtain this once every six months.</p>
-                        <p>This can be used for clothing and small household items.</p>
-                        <p>Thrift Store Hours: *TBA*</p>
-                    </ul>
+                    <p>You can obtain this <strong>once every six months</strong>.<br>
+                    This can be used for clothing and small household items.</p>
+                    <p>Thrift Store Hours: *TBA*</p>
                 </article>
             </div>
 
-            <div class="col-sm-6">
+            <div class="col-sm-12">
+                <article class="card col">
+                        <h5 class="card-header p-b-0">Emergency Food/Toiletries</h5>
+                        <p>You can obtain this <strong>once every month</strong>.</p>
+                    </article>
+            </div>
+
+            <div class="col-sm-12">
                 <article class="card col">
                     <h5 class="card-header p-b-0">Obtaining a Driver's License or ID Card</h5>
-                    <ul>
-                        <p>If you're seeking an ID card, check with DSHS to see if you qualify for a voucher
-                            (we'll pay for the difference).</p>
-                        <p>An appointment will be scheduled to meet with you at the <a href="">Department of Licensing
-                            in Kent</a>.</p>
-                    </ul>
-                </article>
-            </div>
-
-            <div class="col-sm-6">
-                <article class="card col">
-                    <h5 class="card-header p-b-0">Emergency Food/Toiletries</h5>
-                    <ul>
-                        <p>You can obtain this once every month.</p>
-                    </ul>
-                </article>
-            </div>
-
-            <div class="col-sm-6">
-                <article class="card col">
-                    <h5 class="card-header p-b-0">Other Helpful Resources</h5>
-                    <ul>
-                        <p><a href="https://www.211.org/">211</a></p>
-                        <p><a href="http://www.Kentmethodist.com/assistance">Kent Methodist</a></p>
-                    </ul>
+                    <p>If you're seeking an ID card, check with DSHS to see if you qualify for a voucher
+                        (we'll pay for the difference).</p>
+                    <p>An appointment will be scheduled to meet with you at the
+                        <a href="https://fortress.wa.gov/dol/dolprod/dsdoffices/OfficeInfo.aspx?cid=316&oid=26"
+                        style="color: black">Department of Licensing in Kent</a>.</p>
                 </article>
             </div>
         </div>
     </div>
 </div>
 
-<div class="container-fluid">
-    <div class="col-sm-4">
-        <div id="side-carousel" class="carousel slide " data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#side-carousel" data-slide-to="0" class="active"></li>
-                <li data-target="#side-carousel" data-slide-to="1"></li>
-                <li data-target="#side-carousel" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
-                    <a href="#">
-                        <img class="img-responsive" src="images/church_logo.jpg" alt="">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="img-responsive" src="images/church_outside.jpg" alt="">
-                    </a>
-                </div>
-                <div class="carousel-item">
-                    <a href="#">
-                        <img class="img-responsive" src="images/church.jpg" alt="">
-                    </a>
-                </div>
-            </div>
-            <a class="left carousel-control" href="#side-carousel" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#side-carousel" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
+<div>
+    <input type=button onclick="homeRedirect()" value="Click Here for Financial Assistance!">
+</div>
 
-        <div class="container-fluid">
-            <input type=button onclick="" value="Request a Free Consultation!">
+<div class="col-sm-4">
+    <div id="side-carousel" class="carousel slide " data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#side-carousel" data-slide-to="0" class="active"></li>
+            <li data-target="#side-carousel" data-slide-to="1"></li>
+            <li data-target="#side-carousel" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <a href="#">
+                    <img class="img-responsive" src="images/church_logo.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/church_outside.jpg" alt="">
+                </a>
+            </div>
+            <div class="carousel-item">
+                <a href="#">
+                    <img class="img-responsive" src="images/church.jpg" alt="">
+                </a>
+            </div>
         </div>
+        <a class="left carousel-control" href="#side-carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#side-carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <div class="container-fluid">
+        <article class="card col">
+            <h5 class="card-header p-b-0">Other Helpful Resources</h5>
+            <p><a href="https://www.211.org/" style="color: black">211</a></p>
+            <p><a href="http://www.Kentmethodist.com/assistance" style="color: black">Kent Methodist</a></p>
+        </article>
     </div>
 </div>
 
@@ -187,19 +172,19 @@
             <div class="row">
                 <div class="col-sm-3 footer-blurb-item">
                     <h3><i class="fa fa-text-height" aria-hidden="true"></i> 1</h3>
-                    <p> Description</p>
+                    <p>Description</p>
                     <p><a class="btn btn-primary" href="#">Procrastinate</a></p>
                 </div>
 
                 <div class="col-sm-3 footer-blurb-item">
                     <h3><i class="fa fa-wrench" aria-hidden="true"></i> 2</h3>
-                    <p>Description </p>
+                    <p>Description</p>
                     <p><a class="btn btn-success" href="#">Unleash</a></p>
                 </div>
 
                 <div class="col-sm-3 footer-blurb-item">
                     <h3><i class="fa fa-paperclip" aria-hidden="true"></i> 3</h3>
-                    <p> Description</p>
+                    <p>Description</p>
                     <p><a class="btn btn-primary" href="#">Complete</a></p>
                 </div>
 
@@ -209,8 +194,9 @@
         </div>
         <div class="small-print">
             <div class="container">
-                <p><a href="#">Terms &amp; Conditions</a> | <a href="#">Privacy Policy</a> |
-                    <a href="#">Contact</a></p>
+                <p><a href="#" style="color: black">Terms &amp; Conditions</a> |
+                    <a href="#" style="color: black">Privacy Policy</a> |
+                    <a href="#" style="color: black">Contact</a></p>
             </div>
 
             <button class="open-button" onclick="openForm()">Administrator Portal</button>
