--- a/css/home.css
+++ b/css/home.css
@@ -120,3 +120,80 @@ div.nav-square.col-sm-3 {
 #link {
     position: absolute;
 }
+
+.carousel .carousel-inner .item img {
+    width: 100%;
+}
+.carousel .carousel-indicators li {
+    border-color: rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.0);
+}
+.carousel .carousel-indicators li:hover {
+    border-color: rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 0.0);
+}
+.carousel .carousel-indicators li.active {
+    border-color: rgba(255, 255, 255, 1);
+    background: rgba(255, 255, 255, 1);
+}
+.carousel .carousel-caption {
+    color: rgba(255, 255, 255, 1);
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    display: block;
+    z-index: 0;
+}
+.carousel-control {
+    opacity: 1;
+    color: rgba(255, 66, 66, 0.6);
+}
+.carousel-control:hover,
+.carousel-control:focus,
+.carousel-control:active {
+    opacity: 1;
+    color: rgba(255, 255, 255, 0.95);
+}
+.carousel-control.left {
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0.0001) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.25) 0, rgba(0, 0, 0, 0.0001) 100%);
+}
+.carousel-control.right {
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.25) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.25) 100%);
+}
+.carousel-control.left:hover,
+.carousel-control.left:focus,
+.carousel-control.left:active {
+    background: -webkit-linear-gradient(left, rgba(138, 43, 43, 0.4) 0, rgba(0, 0, 0, 0.0001) 100%);
+    background: linear-gradient(to right, rgba(138, 43, 43, 0.4) 0, rgba(0, 0, 0, 0.0001) 100%);
+}
+.carousel-control.right:hover,
+.carousel-control.right:focus,
+.carousel-control.right:active {
+    background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0, rgba(138, 43, 43, 0.4) 100%);
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0, rgba(138, 43, 43, 0.4) 100%);
+}
+.carousel .carousel-control span {
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+    display: inline-block;
+    margin-top: -10px;
+}
+.carousel .carousel-control.left span {
+    margin-left: -10px;
+    left: 50%;
+}
+.carousel .carousel-control.right span {
+    margin-right: -10px;
+    right: 50%;
+}
+@media (min-width: 768px) {
+    .carousel-control span {
+        width: 30px;
+        height: 30px;
+        margin-top: -10px;
+        font-size: 30px;
+    }
+}
