--- a/views/form.html
+++ b/views/form.html
@@ -42,8 +42,12 @@
                                     <input type="checkbox" name="b2"><label for="help2"> I need help with food</label><br>
                                     <input type="checkbox" name="b3" checked><label for="help3"> I need assistance with rent</label>
                                     <input type="checkbox" name="b4"  checked><label for="help4"> I need help getting a ID card</label>
+                                    <input type="checkbox" name="other" checked><label for="other">Other</label>
                                     <br>
-                                    <div class="form-group"><label>Services</label><textarea class="form-check-input" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
+                                    <div class="form-group"><label>Tell us the type of assistance you need</label>
+                                        <br>
+                                        <div style="padding-left: 2%">
+                                        <textarea class="form-check-input" placeholder="Your message here.." data-placement="top" data-trigger="manual"></textarea></div>
                                     <div class="form-group"><button type="submit" class="btn btn-success pull-right">Send It!</button> <p class="help-block pull-left text-danger hide" id="form-error">&nbsp; The form is not valid. </p></div>
                                     </form>
                                 </div>
@@ -51,29 +55,9 @@
                                     <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
                                 </div>
                             </div>
-
-
-                <form>
-                    <div class="form-group">
-                        <label for="exampleInputEmail1">Email address</label>
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                    </div>
-                    <div class="form-group">
-                        <label for="exampleInputPassword1">Password</label>
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                    </div>
-                    <div class="form-check">
-                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                        <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-
-
             <div class="footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
             </div>
+
         </div>
     </div>
 </div>
